Revise market operator

--- a/acronyms.tex
+++ b/acronyms.tex
@@ -34,6 +34,10 @@
 
 \newacronym[longplural=programaciónes lineales]{lp}{LP}{programación lineal}
 
+\newacronym[longplural=programas diarios básicos de casación marginal]{marginalpdbc}{MARGINALPDBC}{programa diarios básico de casación marginal}
+
+\newacronym[longplural=programas intradiarios básicos de casación incremental marginal]{marginalpibci}{MARGINALPIBCI}{programa diarios básico de casación incremental marginal}
+
 \newacronym[longplural=servicios de regulación secundaria]{mfrr}{mFRR}{servicio de regulación secundaria}
 
 \newacronym[longplural=mercados diarios]{md}{MD}{mercado diario}
@@ -53,6 +57,10 @@
 \newacronym[longplural=costes de operación]{opex}{OPEX}{coste de operación}
 
 \newacronym[longplural=tecnologías operativas]{ot}{OT}{tecnología operativa}
+
+\newacronym[longplural=programas diarios básicos finales]{pdbf}{PDBF}{programa diario básico final}
+
+\newacronym[longplural=programas intradiarios básicos de casación acumulados]{pibca}{PIBCA}{programa intradiario básicos de casación acumulado}
 
 \newacronym[longplural=arquitecturas de referencia empresarial de Purdue]{pera}{PERA}{arquitectura de referencia empresarial de Purdue}
 
