--- a/references.bib
+++ b/references.bib
@@ -53,7 +53,7 @@
 
 @article{carrasco2023battery,
   title     = {Battery energy storage systems for the new electricity market landscape: Modeling, state diagnostics, management, and viability—A review},
-  author    = {Carrasco Ortega, Pablo and Dur{\'a}n G{\'o}mez, Pablo and M{\'e}rida S{\'a}nchez, Julio C{\'e}sar and Echevarr{\'\i}a Camarero, Fernando and Pardinas, Angel A},
+  author    = {Carrasco Ortega, Pablo and Durán Gómez, Pablo and Mérida Sánchez, Julio César and Echevarría Camarero, Fernando and Pardinas, Angel A},
   journal   = {Energies},
   volume    = {16},
   number    = {17},
@@ -158,7 +158,7 @@
 
 @article{gaspar2021optimisation,
   title     = {Optimisation and economic feasibility of Battery Energy Storage Systems in electricity markets: The Iberian market case study},
-  author    = {Gaspar, In{\^e}s and Castro, Rui and Sousa, T{\^a}nia},
+  author    = {Gaspar, Inês and Castro, Rui and Sousa, Tânia},
   journal   = {Journal of Cleaner Production},
   volume    = {324},
   pages     = {129255},
@@ -354,11 +354,11 @@
 @article{mendoza2023review,
   title     = {A review in BESS optimization for power systems},
   author    = {Mendoza Osorio, Diego},
-  journal   = {TecnoL{\'o}gicas},
+  journal   = {TecnoLógicas},
   volume    = {26},
   number    = {56},
   year      = {2023},
-  publisher = {Instituto Tecnol{\'o}gico Metropolitano-ITM}
+  publisher = {Instituto Tecnológico Metropolitano-ITM}
 }
 
 @article{minh2024mixed,
@@ -499,6 +499,14 @@
   url    = {https://www.une.org/encuentra-tu-norma/busca-tu-norma/norma?c=N0057580},
   year   = {2017},
   note   = {Accedido: 2025-09-15}
+}
+
+@misc{villagrasa2023como,
+  title  = {Cómo se fija el precio de la electricidad en España (para dummies)},
+  author = {Jorge Villagrasa},
+  url    = {https://edem.eu/como-se-fija-el-precio-de-la-electricidad-en-espana-para-dummies/},
+  year   = 2023,
+  note   = {Accessed: 2025-09-15}
 }
 
 @article{williams1994purdue,
