--- a/principal.tex
+++ b/principal.tex
@@ -52,10 +52,10 @@
 
 \section*{Todo}
 \begin{enumerate}
-  \item Acrónimos MD MI MIC LP MILP
-  \item Imágenes y tablas optional caption \texttt{\textbackslash caption[]\{\}} para que no salgan las citas en el indice de figuras y tablas
-  \item Resumen en inglés de media página, incluyendo el título en inglés y una lista de no más de 10 palabras clave en inglés
-  \item Redactar capítulo estado de la cuestión (1 día)
+  \item Quitar imagenes de OMIE y REE (<1 día)
+  \item Acrónimos MD MI MIC LP MILP MIBEL (mercado ibérico, mercado eléctrico, ...) (<1 día)
+  \item Imágenes y tablas optional caption \texttt{\textbackslash caption[]\{\}} para que no salgan las citas en el indice de figuras y tablas (<1 día)
+  \item Resumen en inglés de media página, incluyendo el título en inglés y una lista de no más de 10 palabras clave en inglés (<1 día)
   \item ¿Anexo de símbolos? (1 día)
   \item Completar figuras (2 días)
 \end{enumerate}
