Translate to english

--- a/resumen.tex
+++ b/resumen.tex
@@ -18,4 +18,26 @@ En respuesta a la creciente adopción de los sistemas de almacenamiento de energ
 
 \vspace{0.5cm}
 
-Internet de las cosas industrial, sistema de almacenamiento de energía en baterías, mercado eléctrico, optimización energética, telecontrol
+Internet de las cosas industrial, sistema de almacenamiento de energía en baterías, mercado eléctrico, optimización energética, telecomunicación
+
+\newpage
+
+\thispagestyle{empty}
+
+\begin{center}
+  {\bf \huge Abstract}
+\end{center}
+
+\vspace{1cm}
+
+In response to the increasing adoption of battery energy storage systems and the absence of solutions currently in production primarily focused on hybrid topological configurations, the design, development, deployment, and validation of Optibat is proposed, a comprehensive system for automating electricity market arbitrage. The system aims to maximize economic profitability by buying and selling energy on spot markets through battery cycling. To achieve this, the system integrates real-time operational data from energy assets with information from the environments of the market and system operators. It uses a mixed-integer linear programming model to determine the optimal charging and discharging strategy and directly aimed at market agents and telecommunications operators. Successfully deployed in multiple large-scale installations, Optibat manages dozens of megawatt-hours daily and generates millions of euros in projected annual revenue. The results demonstrate that hybrid topologies are significantly more profitable than isolated ones, highlighting the model's ability to increase the utilization of energy generation. This way, the project provides a robust and scalable solution that validates the business case for batteries, enabling their effective integration as optimal and reliable assets in the electricity market.
+
+\vspace{1cm}
+
+\begin{center}
+  {\bf \large Keywords}
+\end{center}
+
+\vspace{0.5cm}
+
+Industrial internet of things, battery energy storage system, electricity market, energy optimization, telecommunications
